--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,7 @@
+body
+{
+    background-color: lightsteelblue;
+}
 /*Barre de navigation*/
 .nav
 {
@@ -29,6 +33,70 @@
     padding-left: 15px;
 }
 /*Barre de navigation*/
+/*dropdown*/
+.dropdown{
+  position: relative;
+}
+
+.dropdown ul{
+  margin-top: 30px;
+  padding: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  background: white;
+  left: 0px;
+  list-style: none;
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-10px);
+  transition: all 0.4s ease;
+}
+.dropdown li{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown li:hover{
+  background-color: rgb(197, 173, 181);
+}
+
+.dropdown a{
+  color: black;
+  text-decoration: none;
+}
+.dropdown li a
+{
+    width: 100%;
+}
+
+.dropdown button{
+  background: none;
+  text-decoration: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: #D3D3D3;
+}
+.dropdown button i{
+    padding: 0 5px; 
+}
+
+.dropdown button:focus + ul{
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(0px);
+}
+/*dropdown*/
 /*Barre de navigation mobile*/
 .nav-mobile
 {
