--- a/css/menu.css
+++ b/css/menu.css
@@ -72,6 +72,7 @@ body
 .dropdown a{
   color: black;
   text-decoration: none;
+  font-size: 0.9em;
 }
 .dropdown li a
 {
@@ -81,11 +82,13 @@ body
 .dropdown button{
   background: none;
   text-decoration: none;
+  font-size: 1em;
   border: none;
-  font-size: 18px;
   cursor: pointer;
   text-transform: uppercase;
   color: #D3D3D3;
+  border: hidden;
+  outline-style:none
 }
 .dropdown button i{
     padding: 0 5px; 
